<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Volume Scheduler</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">settings</string>

    <!-- menu title strings -->
    <string name="menu_about">about</string>
    <string name="menu_help">help</string>
    <string name="menu_donate">feed s developer</string>
    <string name="menu_settings">settings</string>
    <!-- menu item strings -->

    <!-- list item strings-->
    <string name="listItem_enabled">enabled</string>
    <string name="listItem_disabled">disabled</string>

    <!-- buttons -->
    <string name="btn_cancel">cancel</string>
    <string name="btn_apply">apply</string>
    <string name="btn_new_setting">create a new setting</string>
    <string name="btn_change_default">default settings</string>

    <string name="title_activity_default_page">DefaultPage</string>
    <string name="title_activity_setting_page">SettingPage</string>

    <!-- volume preference titles -->
    <string name="label_volPreferences">volume preferences</string>
    <string name="label_phone">ringer</string>
    <string name="label_notification">notifications</string>
    <string name="label_feedback">touch feedback &amp; system</string>
    <string name="label_media">music, video, games and other media</string>
    <string name="label_vibrate">vibrate only</string>

    <!-- setting title -->
    <string name="label_title">title</string>

    <!-- time frame preference titles -->
    <string name="label_from">start time</string>
    <string name="label_to">end time</string>

    <!-- day of week repetion preference titles-->
    <string name="label_repeat">repeat</string>
    <string name="dow_mon">Mo</string>
    <string name="dow_tues">Tu</string>
    <string name="dow_wed">We</string>
    <string name="dow_thurs">Th</string>
    <string name="dow_fri">Fr</string>
    <string name="dow_sat">Sa</string>
    <string name="dow_sun">Su</string>

    <!-- icon descriptions -->
    <string name="icon_phone">phone icon</string>
    <string name="icon_notification">notification icon</string>
    <string name="icon_feedback">feedback icon</string>
    <string name="icon_media">media icon</string>

    <!-- toasts -->
    <string name="toast_default_set">default settings updated</string>
    <string name="toast_setting_created">setting created</string>
    <string name="toast_setting_updated">setting updated</string>
    <string name="toast_setting_deleted">setting deleted</string>
    <string name="toast_no_change">no changes</string>

    <string name="toast_silent">phone set to silent</string>
    <string name="toast_vibrate">phone set to vibrate only</string>
    <string name="toast_volume">phone volume set</string>

    <string name="toast_no_title">please enter a title for this time setting</string>
    <string name="toast_title_exists">a setting with this title already exists, please chose another title</string>
    <string name="toast_timeframe_invalid">the start/end time frame entered is invalid, </string>
    <string name="toast_timeframe_conflict">the entered time frame conflicts with an existing setting titled: </string>
    <string name="toast_error">an error occurred</string>
</resources>
